--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Delivery Website</title>
 </head>
 <body>
-  <h1>Welcome to Abba Delivery</h1>
+  <h1>Welcome to Quick Errand</h1>
   <p>Fast and reliable delivery service.</p>
 </body>
 </html>
