remove 'Fast and realible delivery service.' and updated to ...your one-stop errands & delivery Hub

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <h1>Welcome to Quick Errand</h1>
-  <p>Fast and reliable delivery service.</p>
+  <p>...your one-stop errands & delivery Hub.</p>
 </body>
 </html>
