--- a/index.html
+++ b/index.html
@@ -1,10 +1,71 @@
 <!DOCTYPE html>
-<html>
+<html
+
 <head>
-  <title>Delivery Website</title>
+  <meta charset="UTF-8">
+  <title>Quick Errand</title>
+
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to right, #f0f4f8, #ffffff);
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-start;
+      height: 100vh;
+      text-align: center;
+      color: #333;
+      padding: 20px;
+    }
+    h1,<h2>margin: 2</h2>
+
+    h1 {
+      font-size: 3em;
+      color: #05021d;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 1.2em;
+      color: #555;
+    } 
+    .red {color: rgb(204, 38, 9);font-weight: bold;font-size: 1.5em;}
+    .glow {color: rgb(236, 47, 14); animation: glow 1.5s infinite alternate;}
+    @keyframes glow {
+      from {text-shadow: 0 0 6px rgb(156, 57, 20);}
+      to{text-shadow: 0 0 25px rgb(156, 57, 20), 0 0 45px rgb(156, 57, 20);}
+    }
+    .btn {
+      display: inline-block;
+      padding: 12px 24px;
+      background-color: rgb(230, 53, 22);
+      text-decoration: none;
+      color:white;
+      font-size: 1em;
+      border-radius: 8px;
+      margin-top: 20px;
+      transition: background-color 0.3s ease;
+    }
+    .btn:hover {
+      background-color: rgb(165, 26, 7);
+      box-shadow: 0 0 10px rgb(236, 73, 8);
+    }
+  </style
 </head>
+
 <body>
-  <h1>Welcome to Quick Errand</h1>
+  <h2>Welcome to</h1>
+  <h1><span class="orange glow">Quick</span> Errand</h1>
+  <img src="scooter.png">
   <p>...your one-stop errands & delivery Hub.</p>
+  <a href="#" class="btn"> Book Now</a>
 </body>
-</html>
+
+</html
