updated website layout and style

--- a/index.html
+++ b/index.html
@@ -9,10 +9,34 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h2>Welcome to</h1>
-  <h1><span class="orange glow">Quick</span> Errand</h1>
+  <div class="main-container">
+    <div class="landing">
+      <div class="text-section">
+  <h1><span class=highlight>Quick</span> Errand<br>delivry at your<br>doorstep</h1>
+  <h4>Home delivery and online reservation<br>system for restaurants, cafe<br>medicine, food & groceries</h3>
+      </div>
   <img src="scooter.png">
-  <p>...your one-stop errands & delivery Hub.</p>
-  <a href="#" class="btn"> Book Now</a>
+ <p>...your one-stop errands & delivery Hub.</p>
+  <div class="action-section">
+    <a
+    href="#" class="action-btn">
+    <img src="order.png" class="btn-icon">order
+    </a>
+    <a
+    href="#" class="action-btn">
+  <img src="pickup.png" class="btn-icon">Pickup
+  </a>
+  <a
+  href="#" class="action-btn">
+<img src="deli.png" class="btn-icon">Delivery
+</a>
+<a href="#" target="_blank" class="contact-btn">
+  <img src="contact.png" style="width: 40px;"
+</a>
+  </div>
+      </div>
+    </div>
+    
+  <script src="script.js"></script>
 </body>
-</html
+</html>
