--- a/index.html
+++ b/index.html
@@ -2,19 +2,15 @@
 <html
 <head>
   <meta charset="UTF-8">
-  <meta name="veiwport"
-  content="width=device-width,
-  initial-scale=1.0">
+  <meta name="veiwport" content="width=device-width, initial-scale=1.0">
    <title>Quick Errand</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="main-container">
     <div class="landing">
-      <div class="text-section">
   <h1><span class=highlight>Quick</span> Errand<br>delivry at your<br>doorstep</h1>
   <h4>Home delivery and online reservation<br>system for restaurants, cafe<br>medicine, food & groceries</h3>
-      </div>
   <img src="scooter.png">
  <p>...your one-stop errands & delivery Hub.</p>
   <div class="action-section">
@@ -33,9 +29,9 @@
 <a href="#" target="_blank" class="contact-btn">
   <img src="contact.png" style="width: 40px;"
 </a>
-  </div>
       </div>
     </div>
+  </div>
     
   <script src="script.js"></script>
 </body>
