--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="main-container">
     <div class="landing">
   <h1><span class=highlight>Quick</span> Errand<br>delivry at your<br>doorstep</h1>
-  <h4>Home delivery and online reservation<br>system for restaurants, cafe<br>medicine, food & groceries</h3>
+  <h4>Home delivery and online reservation<br>system for restaurants, cafe<br>medicine, food & groceries</h4>
   <img src="scooter.png">
  <p>...your one-stop errands & delivery Hub.</p>
   <div class="action-section">
@@ -27,7 +27,7 @@
 <img src="deli.png" class="btn-icon">Delivery
 </a>
 <a href="#" target="_blank" class="contact-btn">
-  <img src="contact.png" style="width: 40px;"
+  <img src="contact.png" style="width: 40px;">
 </a>
       </div>
     </div>
