--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html
 <head>
+  <link
+  href="https://fonts.googleapis.com/css2?family=Inetr&family=Poppins:wght@600&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Quick Errand</title>
