updated website layout, fonts and style

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html
 <head>
   <link
-  href="https://fonts.googleapis.com/css2?family=Inetr&family=Poppins:wght@600&display=swap" rel="stylesheet">
+  href="https://fonts.googleapis.com/css2?family=Inter&family=Poppins:wght@600&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Quick Errand</title>
